--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html dir="ltr" lang="uk">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React calc</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./style/index.css">
   </head>
   <body>
     <div id="root"></div>
