--- a/calc/index.html
+++ b/calc/index.html
@@ -2,6 +2,7 @@
 <html dir="ltr" lang="uk">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React calc</title>
     <link rel="stylesheet" href="../style/index.css">
   </head>
