--- a/calc/index.html
+++ b/calc/index.html
@@ -1,10 +1,16 @@
-<!doctype html>
-<html dir="ltr" lang="uk">
+<!DOCTYPE html>
+<html dir="ltr" lang="uk" prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React calc</title>
+    <meta property="og:title" content="Calculator">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yaoleksa.github.io/React/calc/index.html">
+    <meta property="og:image" content="../imgs/calculator.jpg">
+    <meta property="og:description" content="Simple online calculator">
+    <title>Calculator</title>
     <link rel="stylesheet" href="../style/index.css">
+    <link rel="shortcut icon" href="../imgs/calculator.jpg">
   </head>
   <body>
     <div id="root"></div>
