--- a/prediction/index.html
+++ b/prediction/index.html
@@ -1,9 +1,16 @@
-<!doctype html>
-<html dir="ltr" lang="uk">
+<!DOCTYPE html>
+<html dir="ltr" lang="uk" prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Predictor">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yaoleksa.github.io/React/prediction/index.html">
+    <meta property="og:image" content="../imgs/Predictor.jpg">
+    <meta property="og:description" content="Makes prediction about your age, gender and nationality based on your name">
     <title>Predictor</title>
     <link rel="stylesheet" href="../style/index.css">
+    <link rel="shortcut icon" href="../imgs/Predictor.jpg">
   </head>
   <body>
     <div id="root"></div>
