Improve main page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-<!doctype html>
-<html dir="ltr" lang="uk">
+<!DOCTYPE html>
+<html dir="ltr" lang="uk" prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React calc</title>
+    <meta property="og:title" content="Useful and not useful tools">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://yaoleksa.github.io/React/index.html">
+    <meta property="og:image" content="./imgs/main.jpg">
+    <meta property="og:description" content="Different useful and funny tools">
+    <title>Useful and not useful tools</title>
     <link rel="stylesheet" href="./style/index.css">
+    <link rel="shortcut icon" href="./imgs/main.jpg">
   </head>
   <body>
     <div id="root"></div>
